logs/django-gears.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Gears-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/django_gears'...
Listing './lib/python3.5/site-packages/django_gears/management'...
Listing './lib/python3.5/site-packages/django_gears/management/commands'...
Listing './lib/python3.5/site-packages/django_gears/templatetags'...
Compiling './lib/python3.5/site-packages/django_gears/utils.py'...
***   File "./lib/python3.5/site-packages/django_gears/utils.py", line 16
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_gears-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/gears'...
Listing './lib/python3.5/site-packages/gears/compilers'...
Listing './lib/python3.5/site-packages/gears/compressors'...
Listing './lib/python3.5/site-packages/gears/processors'...
Listing './lib/python3.5/site-packages/glob2'...
Listing './lib/python3.5/site-packages/glob2-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
